<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Yamba</string>
    <string name="settings">Settings</string>
    <string name="pref_title_username">Username</string>
    <string name="pref_title_password">Password</string>
    <string name="pref_title_api_url">API URL</string>
    <string name="pref_title_refresh_interval">Refresh Interval</string>
    <string name="pref_summary_username">Your Yamba Username</string>
    <string name="pref_summary_password">Your Yamba Password</string>
    <string name="pref_summary_api_url">Yamba API Root URL</string>
    <string name="pref_summary_refresh_interval">Yamba Refresh Interval</string>
    <string name="menu_status">Update Status</string>
    <string name="menu_timeline">Timeline</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_refresh_service">Refresh</string>
    <string name="menu_start_service">Start Service</string>
    <string name="menu_stop_service">Stop Service</string>
    <string name="edit_status">Update Status</string>
    <string name="update_status">Submit</string>
    <string name="status_editor_hint">140 characters or less</string><string name="title_timeline">Timeline</string>
    <string-array name="pref_refresh_interval_names">
        <item>Every minute</item>
        <item>Every 2 Minutes</item>
        <item>Every half hour</item>
        <item>Every hour</item>
    </string-array>

    <string-array name="pref_refresh_interval_values">
        <item>60</item>
        <item>120</item>
        <item>1800</item>
        <item>3600</item>
    </string-array>

</resources>
