<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".StatusActivity">

    <TextView
            android:text="@string/edit_status"
            style="@style/title"/>

    <Button
            android:text="@string/update_status"
            android:onClick="onClick"
            style="@style/button"
            android:id="@+id/button"/>

    <EditText
            android:id="@+id/status_editor"
            android:hint="@string/status_editor_hint"
            style="@style/status_editor"/>
</RelativeLayout>
